# creator

./: .drone.yml  LICENSE.md  README.md  package.json  postcss.config.cjs
.github/workflows/: publish.yml  test.yml
app/: .npmrc.githubactions  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  Old.tsx  example.ts  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: fonts.rs  main.rs
app/src-tauri/src/animation/: mod.rs  timeline.rs
app/src-tauri/src/animation/primitives/: circular_text.rs  entities.rs  interpolations.rs  keyframe.rs  mod.rs  paint.rs  tests.rs  transform.rs  utils.rs  values.rs
app/src-tauri/src/animation/primitives/entities/: common.rs  ellipse.rs  rect.rs  staggered_text.rs  text.rs
app/src/components/: Loading.tsx  Panel.tsx  Popover.tsx  ScrollArea.tsx  TimePicker.tsx  Timeline.tsx  Timestamp.tsx  ToggleGroup.tsx
app/src/drawers/: box.ts  cache.ts  draw.ts  ellipse.ts  paint.ts  rect.ts  staggered-text.ts  text.ts
app/src/hooks/: useKeyControls.ts  useMap.ts
lib/creator_rs/: Cargo.toml
lib/creator_rs/src/: lib.rs
lib/creator_rs/src/animation/: timeline.rs
lib/creator_rs/src/animation/primitives/: interpolations.rs  keyframe.rs  paint.rs  tests.rs  transform.rs  utils.rs
lib/creator_rs/src/animation/primitives/entities/: common.rs  ellipse.rs  mod.rs  rect.rs  staggered_text.rs  text.rs
lib/creator_rs/src/animation/primitives/values/: animated_values.rs  mod.rs  values.rs
lib/creator_rs/src/fonts/: fonts.rs
src/layouts/: Layout.astro
src/pages/: index.astro
web/: astro.config.ts  deploy.sh  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  uno.config.ts
web/.vercel/: project.json
(+65 files in other folders)
