[package]
name = "tempblade-creator-app"
version = "0.0.0"
description = "An open motion design tool written in rust"
authors = ["enricobuehler"]
license = "BSD 3-Clause"
repository = "https://git.unom.io/tempblade/creator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tint = "1.0.0"
simple-easing = "1.0.1"
logging_timer = "1.1.0"
rayon = "1.7"
font-kit = "0.11.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

